fix: fix small alignment errors with buttons
Put the clear button in its own div to fix problems created by 2px borders for buttons

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,13 @@ body {
     flex: 1;
 }
 
+.calcClearRow {
+    flex: 1;
+    display: flex;
+}
+
+
+
 .calcOperators {
     display: flex;
     flex-direction: column;
